# murf-voiceflow-agent

./: .coverage  .dockerignore  .gitignore  API_INTEGRATION.md  ARCHITECTURE.md  COMPLETION_CERTIFICATE.txt  CONTRIBUTING.md  DEPLOYMENT_SUMMARY.md  DEVELOPMENT.md  DOCUMENTATION_INDEX.md  Dockerfile  FINAL_SUMMARY.md  GITHUB_TO_VERCEL_NEXT_STEPS.md  LICENSE  MANIFEST.md  PROJECT_STATUS.md  QUICK_REFERENCE.md  README.md  START_HERE.md  TROUBLESHOOTING.md  VERCEL_DEPLOYMENT_GUIDE.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: vercel-deploy.yml
api/: send.js
app/: __init__.py  __main__.py  agent.py  asr_deepgram.py  cli_runner.py  config.py  llm_openai.py  logger.py  tts_murf.py
app/utils/: __init__.py  audio.py  exceptions.py  retry.py
demo/: README.md
tests/: __init__.py  conftest.py  test_agent.py  test_asr.py  test_config.py  test_integration.py  test_llm.py  test_tts.py
web/: index.html  script.js  styles.css
